--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/jspdf": "^2.0.0",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
