--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@opentelemetry/exporter-jaeger": "^1.25.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/jspdf": "^2.0.0",
-    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
